Bundled Themes: Twenty Twenty image caption is not aligned center when image is, on the front-end. Fixes the image caption alignment issue by adding text-align: center; to .wp-block-image .aligncenter figcaption.
This brings the changes from [47689] to the 5.4 branch.

Props markusthiel, SergeyBiryukov, garethgillman.
Fixes #49320.

Built from https://develop.svn.wordpress.org/branches/5.4@47826


git-svn-id: http://core.svn.wordpress.org/branches/5.4@47602 1a063a9b-81f0-0310-95a4-ce76da25c4cd

--- a/wp-content/themes/twentytwenty/style-rtl.css
+++ b/wp-content/themes/twentytwenty/style-rtl.css
@@ -5847,6 +5847,10 @@ a.to-the-top > * {
 	.wp-block-image .alignright {
 		margin-left: 0;
 	}
+  
+    .wp-block-image .aligncenter figcaption {
+        text-align: center;
+    }
 
 	/* BLOCK: SEPARATOR */
 
